Armature layer dots not updated on changes #59713

Closed
opened 2018-12-21 11:17:45 +01:00 by lucas veber · 36 comments

System Information
Win10
Gtx 980

Blender Version
Broken: 2.8 current build

Short description of error
Usually if an armature layer contained bones, a dot icon is used to show that it's not empty.
However when merging two armatures, if one armature contains bones in a hidden layer, the dot icon is not displayed after merging.

Exact steps for others to reproduce the error

  • Open the blend file
    armature_layers_refresh.blend
  • There are two armature in the scene. "Armature1" contain one bone in the first layer (visible)."Armature2" contains one bone in a hidden layer (8)
  • Select "Armature2" then "Armature1". Ctrl-J to join.
  • The dot icon is missing on the 8th layer.
**System Information** Win10 Gtx 980 **Blender Version** Broken: 2.8 current build **Short description of error** Usually if an armature layer contained bones, a dot icon is used to show that it's not empty. However when merging two armatures, if one armature contains bones in a hidden layer, the dot icon is not displayed after merging. **Exact steps for others to reproduce the error** - Open the blend file [armature_layers_refresh.blend](https://archive.blender.org/developer/F6024309/armature_layers_refresh.blend) - There are two armature in the scene. "Armature1" contain one bone in the first layer (visible)."Armature2" contains one bone in a hidden layer (8) - Select "Armature2" then "Armature1". Ctrl-J to join. - The dot icon is missing on the 8th layer.
Author

Added subscriber: @LucasVeber

Added subscriber: @LucasVeber

#67031 was marked as duplicate of this issue

#67031 was marked as duplicate of this issue

#62168 was marked as duplicate of this issue

#62168 was marked as duplicate of this issue

#61910 was marked as duplicate of this issue

#61910 was marked as duplicate of this issue

#61545 was marked as duplicate of this issue

#61545 was marked as duplicate of this issue
lucas veber changed title from Armature layers: dot not displayed on armature layers to Armature layers: dot not displayed 2018-12-21 11:18:10 +01:00

Added subscribers: @brecht, @ZedDB

Added subscribers: @brecht, @ZedDB

I doesn't seem to matter which way I join or if the are visible or not.
If I join 1 to 2, only the dots from 2 is visible and if I join 2 to 1 only 1 dots are visible.

@brecht who to assign this to?

I doesn't seem to matter which way I join or if the are visible or not. If I join 1 to 2, only the dots from 2 is visible and if I join 2 to 1 only 1 dots are visible. @brecht who to assign this to?

Added subscribers: @angavrilov, @JoshuaLeung

Added subscribers: @angavrilov, @JoshuaLeung

Maybe @JoshuaLeung or @angavrilov.

See 2b09062.

There's more operations that don't update, like deleting bones.

Maybe @JoshuaLeung or @angavrilov. See 2b09062. There's more operations that don't update, like deleting bones.
Joshua Leung was assigned by Sebastian Parborg 2018-12-21 18:33:20 +01:00
Member

Added subscriber: @Mets

Added subscriber: @Mets
Member

I don't know since when, but at least in c59370bf64, the dots on armature layers don't display, period. Edit mode, pose mode, after joining separate armatures, nothing.

The only way I found was by appending a skeleton from a 2.79 blend. But even then, the dots that were there the moment it appended will stay there for ever, even if you delete every bone.

I don't know since when, but at least in c59370bf643f, the dots on armature layers don't display, period. Edit mode, pose mode, after joining separate armatures, nothing. The only way I found was by appending a skeleton from a 2.79 blend. But even then, the dots that were there the moment it appended will stay there for ever, even if you delete every bone.
Member

This seems to be fixed as of at least a1ae04d15a, maybe longer. All the dots are working perfectly for me. Yay!!!

Edit: Fixed in pose mode only! :C If moving bones to different layers in edit mode, it's still broken.

This seems to be fixed as of at least a1ae04d15a9f, maybe longer. All the dots are working perfectly for me. Yay!!! Edit: Fixed in pose mode only! :C If moving bones to different layers in edit mode, it's still broken.
Author

Does not seem fixed in the latest daily build.

Does not seem fixed in the latest daily build.

Added subscriber: @wevon-2

Added subscriber: @wevon-2

Yes, today I tried on several computers and does not work, there is no indication.

Yes, today I tried on several computers and does not work, there is no indication.

Added subscriber: @DiegoSG

Added subscriber: @DiegoSG

Added subscriber: @particl3s

Added subscriber: @particl3s

Added subscriber: @Vyach

Added subscriber: @Vyach
Brecht Van Lommel changed title from Armature layers: dot not displayed to Armature layer dots not updated on changes 2019-03-04 10:52:06 +01:00

Added subscriber: @TakeshiFunahashi

Added subscriber: @TakeshiFunahashi

I test with recent builds, script generate new edit-bone (bn) for armature, at same time set bone layer , bn.layers[16] = True
bn.layers- [x] = False

bone move to layers 16, but the dot of layer 16 not up-date. and there seems no way to force up-date from blender UI

I test with recent builds, script generate new edit-bone (bn) for armature, at same time set bone layer , bn.layers[16] = True bn.layers- [x] = False bone move to layers 16, but the dot of layer 16 not up-date. and there seems no way to force up-date from blender UI
Member

I want to recommend this bug to be considered High prio, since I think it will confuse or even turn off a lot of people from 2.80, if god forbid it stays in for the final release. Just a thought tho.

I want to recommend this bug to be considered High prio, since I think it will confuse or even turn off a lot of people from 2.80, if god forbid it stays in for the final release. Just a thought tho.

Removed subscriber: @Vyach

Removed subscriber: @Vyach
Member

Added subscribers: @DillonGu, @pablovazquez, @fsiddi

Added subscribers: @DillonGu, @pablovazquez, @fsiddi
Member

The description of the issue can be much simpler:

Moving bones between layers in edit mode doesn't show the dot icon in the layers UI. Works fine in Pose mode.

I hope this can be addressed before the release, while making the Blender Fundamentals training videos this issue pops up constantly and it's a pity to have to explain it is a missing update bug.

The description of the issue can be much simpler: > Moving bones between layers in edit mode doesn't show the dot icon in the layers UI. Works fine in Pose mode. I hope this can be addressed before the release, while making the Blender Fundamentals training videos this issue pops up constantly and it's a pity to have to explain it is a missing update bug.

This issue was referenced by 580acab173

This issue was referenced by 580acab1737c726f43e39792dbb75f3ca2089fcb

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'

This only fixes the case for joining armatures, there is a deeper problem here.

This only fixes the case for joining armatures, there is a deeper problem here.

This issue was referenced by 58db64a3b6

This issue was referenced by 58db64a3b638d7c40afcd72f29e861fa4b99c688

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'

This issue was referenced by 709f126e81

This issue was referenced by 709f126e8143da4fa28a08a94e13581c68ab6b29

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This works great now, thank you! The only remaining issue is that upon creation of the armature, the bone layer still does not display there being a bone in the first layer by default. Everything else works great!

This works great now, thank you! The only remaining issue is that upon creation of the armature, the bone layer still does not display there being a bone in the first layer by default. Everything else works great!

As Dillon Gu said, When generate armature as single bone from blender UI , bone can not show dot (though it is located layers[0])
so to show bone dot, I must need to change bone layer from blender UI. (3d view topmenu > Armature >change bone layers once)

but if I use bpy to change bone layer,
ebn.layers- [x] = True, ebn.layers- [x] = False , it change bone layer, but bone dots not up-date correctly. (dot should be layer[1])
boneupdate.JPG

Is there way to up-date it from bpy? if I must need to use bpy.ops ?

As Dillon Gu said, When generate armature as single bone from blender UI , bone can not show dot (though it is located layers[0]) so to show bone dot, I must need to change bone layer from blender UI. (3d view topmenu > Armature >change bone layers once) but if I use bpy to change bone layer, ebn.layers- [x] = True, ebn.layers- [x] = False , it change bone layer, but bone dots not up-date correctly. (dot should be layer[1]) ![boneupdate.JPG](https://archive.blender.org/developer/F7619625/boneupdate.JPG) Is there way to up-date it from bpy? if I must need to use bpy.ops ?

"bpy.ops.armature.bone_layers()" could up-date, without change current each bone layer.

if set bone layer by bpy.data, or when all bone layer is default, layer[0],
run "bpy.ops.armature.bone_layers()" for one bone of armature, seems up-date all bones dot correctly.

amt = bpy.context.active_object
bpy.ops.object.mode_set(mode = 'EDIT')
ebns = amt.data.edit_bones
ebn = ebns[0]
layer = ebn.layers
bpy.ops.armature.bone_layers(layers=layer)

"bpy.ops.armature.bone_layers()" could up-date, without change current each bone layer. if set bone layer by bpy.data, or when all bone layer is default, layer[0], run "bpy.ops.armature.bone_layers()" for one bone of armature, seems up-date all bones dot correctly. ``` amt = bpy.context.active_object bpy.ops.object.mode_set(mode = 'EDIT') ebns = amt.data.edit_bones ebn = ebns[0] layer = ebn.layers bpy.ops.armature.bone_layers(layers=layer) ```
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
11 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59713
No description provided.