Fix T59713: Moving bones between layers in edit mode doesn't show the dot icon in the layers UI